<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/ic_background"
    tools:context=".ui.activities.MainActivity"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilUsernameLoginF"
            android:hint="@string/username"
            app:errorEnabled="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietUsernameLoginF"
                android:layout_width="@dimen/default_input_field_width"
                android:layout_height="@dimen/default_input_field_height"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPasswordLoginF"
            android:hint="@string/password"
            app:errorEnabled="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietPasswordLoginF"
                android:layout_width="@dimen/default_input_field_width"
                android:layout_height="@dimen/default_input_field_height"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            android:background="@color/colorPrimary"
            android:text="@string/login"
            android:layout_width="250dp"
            android:layout_height="50dp"/>

        <LinearLayout
            android:layout_marginTop="@dimen/default_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvNoAccount"
                android:text="@string/no_account"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/default_padding"/>

<!--            <TextView-->
<!--                android:id="@+id/tvRegister"-->
<!--                android:text="@string/register"-->
<!--                android:textSize="18sp"-->
<!--                android:textColor="@color/colorAccent"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:padding="@dimen/default_padding" />-->

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSignUp"
            android:background="@color/colorPrimary"
            android:text="@string/sign_up"
            android:layout_width="250dp"
            android:layout_height="50dp"/>

    </LinearLayout>


    <ProgressBar
        android:id="@+id/pbLoginLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone" />


</androidx.constraintlayout.widget.ConstraintLayout>