<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/myToolbar"
            app:title=" "
            android:background="@drawable/toolbar"
            android:layout_height="?attr/actionBarSize"
            android:layout_width="match_parent" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_background"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/ivPhotoCreatePostF"
                android:background="@drawable/background_image_view_photo"
                android:layout_width="@dimen/default_input_field_width"
                android:layout_height="@dimen/default_input_field_width"
                android:contentDescription="@string/take_photo" />

            <com.google.android.material.textfield.TextInputLayout
                android:hint="@string/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tietDescriptionCreatePostF"
                    android:layout_width="@dimen/default_input_field_width"
                    android:layout_height="150dp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <!--                <com.google.android.material.textfield.TextInputLayout-->
            <!--                        android:hint="@string/image_link"-->
            <!--                        android:layout_width="wrap_content"-->
            <!--                        android:layout_height="wrap_content"-->
            <!--                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">-->

            <!--                    <com.google.android.material.textfield.TextInputEditText-->
            <!--                            android:id="@+id/tietLink"-->
            <!--                            android:layout_width="@dimen/default_input_field_width"-->
            <!--                            android:layout_height="100dp"-->
            <!--                            android:text="@={viewModel.imageFile}" />-->

            <!--                </com.google.android.material.textfield.TextInputLayout>-->

            <Button
                android:id="@+id/btnCreatePost"
                android:layout_width="@dimen/default_input_field_width"
                android:layout_height="@dimen/default_input_field_height"
                android:background="@color/colorPrimary"
                android:text="@string/public_post" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/pbCreatePostLoading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>